# entities

./: Cargo.toml
entities/: Cargo.toml
entities/src/: lib.rs  persistence.rs
server/: Cargo.toml
src/: lib.rs
src/order/: mod.rs
src/product/: mod.rs
src/user/: mod.rs  user_registry.rs
