[package]
name = "entities"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = ["full"] }
itertools = "0.14.0"
jiff = { version = "0.1.29", features = ["serde"] }
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
trait-variant = "0.1.2"
uuid = { version = "1.12.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde", "v7"] }


[dev-dependencies]
rtest = "0.2.2"
