[package]
name = "BE"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[workspace]
members = ["entities", "server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Simon Théorêt <simonteoret@hotmail.com"]
repository = "https://github.com/SimonTheoret/entities"
# rust-version = "1.80.1" #find MRSV






# [lib]
# name = "entities"
# path = "entities/src"

[[bin]]
name = "server"
path = "server/src/main.rs"

